--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
     <link rel="stylesheet" href="/static/stylesheets/style.css">
-    <link rel="shortcut icon" href="/static/images/default-profile.png">
+    <link rel="shortcut icon" href="/static/images/navbar.png">
   </head>
 
   <body class="{% block body_class %}{% endblock %}" style="margin:0">
@@ -25,7 +25,7 @@
       <div class="container-fluid">
         <div class="navbar-header">
           <a href="/" class="navbar-brand">
-            <img src="/static/images/default-profile.png" alt="logo">
+            <img src="/static/images/navbar.png" alt="logo">
           </a>
         </div>
         <ul class="nav navbar-nav navbar-right">
