--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -4,11 +4,20 @@ body {
   font-family: "Bangers", cursive;
 }
 
-.alert {
+.alert-container {
+  position: relative;
+  border-radius: 0.375rem;
+  left: 25%;
+  width: 50%;
   text-align: center;
-  color: #e62429;
+  background: #e62429;
+}
 
+.alert {
+  color: white;
+  box-shadow: 3px 3px #202020;
   font-size: 20px;
+  margin-top: 50px;
 }
 
 h3 {
@@ -63,6 +72,14 @@ a > #comic-img:hover {
   background-color: #202020 !important;
   border-color: #202020 !important;
   color: white !important;
+}
+
+#guest-login-btn {
+  padding: 10px;
+}
+
+#login-btn {
+  width: 23%;
 }
 
 /* ======================= Nav */
@@ -201,6 +218,11 @@ nav + .container {
 
 .join-message {
   margin-top: 100px;
+}
+
+.login-message {
+  margin-top: 100px;
+  margin-bottom: 20px;
 }
 
 .user-bio,
@@ -435,11 +457,22 @@ nav + .container {
 
 /* ========================== Signup/Login */
 
+#login-container {
+  margin-top: -50px;
+}
+#user_form {
+  margin-top: 20px;
+}
+
 #user_form input.form-control {
   font-size: 18px;
   font-weight: bold;
   padding: 12px;
   border-color: #202020;
+}
+
+.signup-message {
+  margin-bottom: 20px;
 }
 
 /* =========================== Edit Page */
