--- a/templates/users/signup_form.html
+++ b/templates/users/signup_form.html
@@ -7,7 +7,8 @@
 <div class="row justify-content-md-center">
   <div class="col-md-7 col-lg-5">
     <h2 class="join-message">Ready to be an Avenger?</h2>
-    <h3>Join below and start searching your favorite Marvel characters.</h3>
+    <h3 class="signup-message">Join below and start searching your favorite Marvel characters.</h3>
+    <a id="guest-login-btn" class="complementary-btn btn-info" href="/guest-login">Continue as Guest</a>
     <form method="POST" id="user_form">
       {{ form.hidden_tag() }}
 
